k8s/config-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      component: configserver
  template:
    metadata:
      labels:
        component: configserver
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Djava.security.egd=file:/dev/./urandom
        image: dhananjay12/config-server:latest
        name: configserver
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8080
