k8s/user-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Djava.security.egd=file:/dev/./urandom
        - name: SPRING_CLOUD_CONFIG_URI
        - name: SPRING_EUREKA
          value: http://eureka-cluster-ip-service/eureka
        - name: SPRING_PROFILES_ACTIVE
          value: default
        image: dhananjay12/user-service:latest
        name: user
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
        - containerPort: 8100
