k8s/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: configserver
  ports:
  - port: 8888
    targetPort: 8888
