k8s/contactus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contactus-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: contactus
  ports:
  - port: 8080
    targetPort: 8080
