k8s/eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  type: ClusterIP
  selector:
    component: eureka
  ports:
  - port: 8761
    targetPort: 8761
