k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
  - port: 8100
    targetPort: 8100
